# databricks-mcp-server

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  server.json
.github/workflows/: ci.yml
databricks_mcp/: __init__.py  config.py  prompts.py  server.py  utils.py
databricks_mcp/resources/: __init__.py  workspace_info.py
databricks_mcp/tools/: __init__.py  apps.py  compute.py  connections.py  dashboards.py  database.py  experiments.py  genie.py  iam.py  jobs.py  pipelines.py  secrets.py  serving.py  sharing.py  sql.py  unity_catalog.py  vector_search.py  workflows.py  workspace.py
docker-mcp/: server.yaml  tools.json
tests/: conftest.py  test_compute.py  test_config.py  test_server.py  test_sql.py  test_unity_catalog.py  test_utils.py
